opam-version: "2.0"
name: "naboris"
version: "0.0.2"
synopsis: "Simple http server"
description: "Simple http server built using httpaf and lwt"
maintainer: "Shawn McGinty <loltempast@gmail.com>"
authors: [ "Shawn McGinty <loltempast@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/shawn-mcginty/naboris"
bug-reports: "https://github.com/shawn-mcginty/naboris/issues"
dev-repo: "git+https://github.com/shawn-mcginty/naboris.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build}
  "reason" {>= "3.4.0"}
  "httpaf" {>= "0.6.0"}
  "httpaf-lwt-unix" {>= "0.6.0"}
  "lwt" {>= "4.2.1"}
  "uri" {>= "2.2.0"}
]
