opam-version: "2.0"
name: "naboris"
version: "0.2.0"
synopsis: "Simple http server"
description: "Simple http server built on httpaf and lwt"
maintainer: "Shawn McGinty <loltempast@gmail.com>"
authors: [ "Shawn McGinty <loltempast@gmail.com>" ]
license: "MIT"
homepage: "https://github.com/shawn-mcginty/naboris"
bug-reports: "https://github.com/shawn-mcginty/naboris/issues"
dev-repo: "git+https://github.com/shawn-mcginty/naboris.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.07"}
  "base64" {>= "3.4.0"}
  "dune" {>= "1.6"}
  "digestif" {>= "0.8.0"}
  "httpaf" {>= "0.6.0"}
  "httpaf-lwt-unix" {>= "0.6.0"}
  "lwt" {>= "5.1.1"}
  "lwt_ppx" {>= "2.0.1"}
  "magic-mime" {>= "1.1.2"}
  "uri" {>= "2.2.0"}
]
depopts: [
  "conf-libev"
]
